scss/custom/layout/_wraps.scss
/*------------------------------------*\
    $WRAPS
\*------------------------------------*/
$wrap-widths: (
  base: 1100px,
);

%wrap-margin {
  margin-right: auto;
  margin-left: auto;
}

%wrap-padding {
  @include px-and-rem(padding-left, 1);
  @include px-and-rem(padding-right, 1);
}

%wrap-base {
  @extend %wrap-margin;
  @extend %wrap-padding;
}

/**
 * Generates placeholders and classes for wraps andtheir widths
 * e.g.

  %wrap-width--large { max-width: 1280px;}
  .wrap--large { ... }
  %wrap-width        { max-width: 960px;}
  .wrap { ... }
  %wrap-width--small { max-width: 640px;}
  .wrap--small { ... }
 */
@each $wrap-name, $wrap-width in $wrap-widths {
  @if $wrap-name == 'base' {
    %wrap-width { max-width: $wrap-width;}
    %wrap {
      @extend %wrap-width;
      @extend %wrap-base;
    }
    .wrap { @extend %wrap;}
  } @else {
    %wrap-width--#{$wrap-name} { max-width: $wrap-width;}
    %wrap--#{$wrap-name} {
      @extend %wrap-width;
      @extend %wrap-base;
    }
    .wrap--#{$wrap-name} { @extend %wrap--#{$wrap-name};}
  }
}

